--- a/styles/style.css
+++ b/styles/style.css
@@ -10,16 +10,63 @@
 }
 
 .header {
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #F2F2F2;
+  z-index: -2;
   /* parameters for the header section */
+}
+
+.logo {
+  position: absolute;
+  z-index: 1;
+  left: 64px;
+  top: 30px;
+}
+
+.header__title {
+  display: flex;
+  align-self: center;
+  width: 730px;
+  margin-left: 64px;
+  z-index: 2;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+}
+
+.header__subtitle {
+  width: 388px;
+  position: absolute;
+  z-index: 2;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin-left: 64px;
+  bottom: 0;
+  left: 30px;
+}
+
+.header__main-illustration {
+  position: absolute;
+  width: 756px;
+  height: 608px;
+  bottom: 0px;
+  right: 0px;
+  z-index: 2;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
+  position: absolute;
   height: 568px;
   width: 568px;
+  background-color: #2f80ED;
+  z-index: 1;
+  top: 64px;
+  right: 0px;
 }
 
 /* including elements with key-value modifiers */
@@ -29,3 +76,223 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+.two-columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: space-between;
+  width: 80%;
+  min-width: 784px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: 175px;
+  margin-right: 175px;
+}
+
+.two-columns__brief {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #2f80ED;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.section-title {
+  width: 60%;
+  margin: 100px auto 20px auto;
+  text-align: center;
+  line-height:69px;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  width: 1100px;
+  margin: 60px auto 100px auto;
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+
+.table__cell {
+  width: 250px;
+  margin-bottom: 60px;
+  margin-right: 20px;
+}
+
+.table__heading {
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.feynman {
+  background-color: #F2F2F2;
+  height: 790px;
+  position: relative;
+  z-index: 0; 
+}
+
+.feynman__image {
+  position: absolute;
+  height: 637px;
+  width: 867px;
+  z-index: 1;
+  bottom: 0px;
+  left: 0px;
+}
+
+
+.feynman__title {
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  z-index: 2;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 2;
+}
+
+.kaufman {
+  position: relative;
+  background-color: #1F1F1F;
+}
+
+.section-title_theme_dark {
+  width: 60%;
+  margin: 90px auto 20px auto;
+  text-align: center;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  color: white;
+}
+ .table_theme_dark {
+  width: 1100px;
+  margin-bottom: 90px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  z-index: 1;
+ }
+
+ .table__heading_theme_dark {
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  z-index: 1;
+ }
+
+ .table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 1;
+ }
+
+ .kaufman__triangle {
+  height: 660px;
+  width: 636px;
+  position: absolute;
+  top: 0px;
+  right: -124px;
+  overflow: hidden;
+  z-index: 0;
+ }
+
+.footer {
+  background-color: #1F1F1F;
+  min-height: 350px;
+}
+
+.footer__columns {
+  margin: 60px auto 40px auto;
+  width: 90%;
+}
+
+.footer__columns__content_copyright {
+  position: relative;
+  flex-basis: 711px;
+}
+
+.logo_place_footer {
+  position: absolute;
+  width: 183px;
+  height: 35px;
+  top: 0px;
+  left: 0px;
+}
+
+.footer__author {
+  position: absolute;
+  margin: 18px 0px;
+  bottom: 0px;
+  left: 0px;
+  color: white;
+}
+
