--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@
 }
 
 .header {
+  display: flex;
   position: relative;
   height: 100vh;
   min-height: 600px;
@@ -27,7 +28,6 @@
 }
 
 .header__title {
-  display: flex;
   align-self: center;
   width: 730px;
   margin-left: 64px;
@@ -91,10 +91,6 @@
 }
 
 .two-columns__brief {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -114,6 +110,8 @@
   font-size: 24px;
   font-weight: bold;
 }
+
+
 
 .section-title {
   width: 60%;
@@ -162,28 +160,25 @@
 }
 
 .feynman {
-  background-color: #F2F2F2;
-  height: 790px;
   position: relative;
-  z-index: 0; 
+  min-height: 790px;
+  padding-top: 100px;
+  background: #F2F2F2 url(../images/feynman.png) no-repeat bottom left / 867px 637px ;
+  /* background-color: #F2F2F2;
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
+  background-position: bottom left;
+  background-repeat: no-repeat; */
 }
-
-.feynman__image {
-  position: absolute;
-  height: 637px;
-  width: 867px;
-  z-index: 1;
-  bottom: 0px;
-  left: 0px;
-}
-
 
 .feynman__title {
   text-align: center;
+  width: 775px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
-  z-index: 2;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .feynman__subtitle {
@@ -191,7 +186,6 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-
 }
 
 .feynman__link {
@@ -201,7 +195,7 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  z-index: 2;
+  text-decoration: none;
 }
 
 .kaufman {
@@ -237,7 +231,6 @@
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
-  z-index: 1;
  }
 
  .table__heading_theme_dark {
@@ -245,14 +238,12 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  z-index: 1;
  }
 
  .table__text_theme_dark {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  z-index: 1;
  }
 
  .kaufman__triangle {
@@ -262,7 +253,6 @@
   top: 0px;
   right: -124px;
   overflow: hidden;
-  z-index: 0;
  }
 
 .footer {
