--- a/styles/style.css
+++ b/styles/style.css
@@ -16,18 +16,23 @@
   min-height: 600px;
   max-height: 756px;
   background-color: #F2F2F2;
-  z-index: -2;
+  z-index: 2;
   /* parameters for the header section */
 }
 
 .logo {
-  position: absolute;
   z-index: 1;
   left: 64px;
   top: 30px;
 }
 
+.logo_place_header {
+  position: absolute;
+}
+
 .header__title {
+  margin: 0;
+  padding: 0;
   align-self: center;
   width: 730px;
   margin-left: 64px;
@@ -38,15 +43,22 @@
 }
 
 .header__subtitle {
+  margin: 0;
+  padding: 0;
   width: 388px;
   position: absolute;
   z-index: 2;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  margin-left: 64px;
+  left: 64px;
   bottom: 0;
   left: 30px;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ED;
 }
 
 .header__main-illustration {
@@ -69,21 +81,12 @@
   right: 0px;
 }
 
-/* including elements with key-value modifiers */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
-
 .two-columns {
   display: flex;
   flex-direction: row;
   justify-content: center;
   justify-content: space-between;
   width: 80%;
-  min-width: 784px;
   margin-top: 100px;
   margin-bottom: 100px;
   margin-left: 175px;
@@ -91,14 +94,18 @@
 }
 
 .two-columns__brief {
+  margin: 0;
+  padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
   color: #2f80ED;
+  max-width: 175px;
 }
 
 .two-columns__main-text {
+  min-width: 784px;
   width: 80%;
   line-height: 34px;
   font-size: 24px;
@@ -123,6 +130,8 @@
 }
 
 .section-subtitle {
+  margin: 0;
+  padding: 0;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
@@ -133,6 +142,7 @@
 }
 
 .table {
+  padding: 0;
   width: 1100px;
   margin: 60px auto 100px auto;
   display: flex;
@@ -147,6 +157,7 @@
 }
 
 .table__heading {
+  margin-top: 0;
   margin-bottom: 20px;
   line-height: 1.15;
   font-size: 24px;
@@ -154,6 +165,8 @@
 }
 
 .table__text {
+  margin: 0;
+  padding: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -172,6 +185,8 @@
 }
 
 .feynman__title {
+  margin: 0;
+  padding: 0;
   text-align: center;
   width: 775px;
   line-height: 1.15;
@@ -182,6 +197,8 @@
 }
 
 .feynman__subtitle {
+  margin: 0;
+  padding: 0;
   text-align: center;
   line-height: 51px;
   font-size: 36px;
@@ -196,6 +213,7 @@
   font-size: 36px;
   font-weight: normal;
   text-decoration: none;
+  color:#2f80ED;
 }
 
 .kaufman {
@@ -240,6 +258,13 @@
   list-style-type: none;
  }
 
+ .table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
+}
+
  .table__heading_theme_dark {
   width: 200px;
   margin-bottom: 20px;
@@ -274,13 +299,13 @@
   margin: 60px auto 40px auto;
   width: 90%;
   display: flex;
-  justify-content: space-between;
-  align-items:flex-start;
 }
 
 .footer__columns__content_copyright {
   flex-basis: 711px;
   display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .logo_place_footer {
@@ -296,7 +321,15 @@
   justify-content: flex-end;
 }
 
+.footer__columns__content_social {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
 .footer__column-heading {
+  margin: 0;
+  padding: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
@@ -311,6 +344,7 @@
   padding: 0;
   list-style: none;
   color: white;
+  text-decoration: none;
 }
 
 .footer__column-link {
@@ -321,4 +355,12 @@
   list-style: none;
   color: white;
   text-decoration: none;
+}
+
+.footer__social-icons {
+  margin: 0;
+  padding: 0;
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
 }
