--- a/styles/style.css
+++ b/styles/style.css
@@ -301,30 +301,38 @@
 }
 
 .footer__columns__content_copyright {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: flex-end;
   flex-basis: 711px;
+  flex: 3;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.footer__columns__content_about {
+  margin: 0;
+  padding: 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__columns__content_social {
+  margin: 0;
+  padding: 0;
+  flex: 1; 
+  display: flex;
+  flex-direction: column;
 }
 
 .logo_place_footer {
   width: 183px;
   height: 35px;
-  top: 0px;
-  left: 0px;
 }
 
 .footer__author {
+  margin: 0;
+  padding: 0;
   color: white;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.footer__columns__content_social {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
 }
 
 .footer__column-heading {
@@ -335,6 +343,7 @@
   font-weight: bold;
   color: white;
   margin-bottom: 20px;
+  white-space: nowrap;
 }
 
 .footer__list {
