--- a/styles/style.css
+++ b/styles/style.css
@@ -22,12 +22,12 @@
 
 .logo {
   z-index: 1;
-  left: 64px;
-  top: 30px;
 }
 
 .logo_place_header {
   position: absolute;
+  left: 64px;
+  top: 30px;
 }
 
 .header__title {
@@ -52,7 +52,7 @@
   font-size: 18px;
   font-weight: normal;
   left: 64px;
-  bottom: 0;
+  bottom: 30px;
 }
 
 .header__link {
@@ -88,8 +88,8 @@
   width: 80%;
   margin-top: 100px;
   margin-bottom: 100px;
-  margin-left: 175px;
-  margin-right: 175px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .two-columns__brief {
@@ -117,7 +117,15 @@
   font-weight: bold;
 }
 
+.two-columns__paragraph {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 30px;
+}
 
+.two-columns__paragraph:last-child {
+  margin: 0;
+}
 
 .section-title {
   width: 60%;
@@ -141,10 +149,12 @@
 }
 
 .table {
+  margin: 0;
   padding: 0;
   width: 1100px;
   margin: 60px auto 100px auto;
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   list-style-type: none;
 }
@@ -165,7 +175,7 @@
 
 .table__text {
   margin: 0;
-  padding: 20px;
+  padding-bottom: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -219,11 +229,6 @@
   position: relative;
   background-color: #1F1F1F;
   overflow: hidden;
-}
-
-.kaufman__content {
-  position: relative;
-  z-index: 1;
 }
 
 .section-title_theme_dark {
@@ -298,28 +303,26 @@
   margin: 60px auto 40px auto;
   width: 90%;
   display: flex;
+  justify-content: space-between;
 }
 
-.footer__columns__content_copyright {
+.footer__column__content_copyright {
   flex-basis: 711px;
-  flex: 3;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
 
-.footer__columns__content_about {
+.footer__column__content_about {
   margin: 0;
   padding: 0;
-  flex: 1;
   display: flex;
   flex-direction: column;
 }
 
-.footer__columns__content_social {
+.footer__column__content_social {
   margin: 0;
   padding: 0;
-  flex: 1;
   display: flex;
   flex-direction: column;
 }
@@ -332,6 +335,9 @@
 .footer__author {
   margin: 0;
   padding: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
   color: white;
 }
 
@@ -347,6 +353,8 @@
 }
 
 .footer__list {
+  margin: 0;
+  padding: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
