--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
   min-height: 600px;
   max-height: 756px;
   background-color: #F2F2F2;
-  z-index: 2;
+  z-index: 1;
   /* parameters for the header section */
 }
 
@@ -66,7 +66,7 @@
   height: 608px;
   bottom: 0px;
   right: 0px;
-  z-index: 2;
+  z-index: -1;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
@@ -78,6 +78,7 @@
   z-index: 1;
   top: 64px;
   right: 0px;
+  z-index: -2;
 }
 
 .two-columns {
@@ -151,7 +152,8 @@
 .table {
   padding: 0;
   width: 1100px;
-  margin: 60px auto 100px auto;
+  margin: 0px auto 100px;
+  padding: 90px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -160,8 +162,12 @@
 
 .table__cell {
   width: 250px;
-  margin-bottom: 60px;
+  margin-top: 60px;
   margin-right: 20px;
+}
+
+.table__text:nth-child(3) {
+  padding-top: 20px;
 }
 
 .table__heading {
@@ -174,7 +180,6 @@
 
 .table__text {
   margin: 0;
-  padding-bottom: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -202,6 +207,7 @@
   font-weight: bold;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 70px;
 }
 
 .feynman__subtitle {
@@ -228,6 +234,7 @@
   position: relative;
   background-color: #1F1F1F;
   overflow: hidden;
+  z-index: 1;
 }
 
 .section-title_theme_dark {
@@ -251,10 +258,12 @@
   color: white;
 }
  .table_theme_dark {
-  width: 1100px;
-  margin-bottom: 90px;
+  margin: 0;
+  padding: 0;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 90px;
+  width: 1100px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -264,12 +273,10 @@
  .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
   margin-top: 80px;
 }
 
  .table__heading_theme_dark {
-  width: 200px;
   margin-bottom: 20px;
   line-height: 1.15;
   font-size: 24px;
@@ -277,19 +284,19 @@
  }
 
  .table__text_theme_dark {
-  width: 200px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
  }
 
  .kaufman__triangle {
-  height: 660px;
-  width: 636px;
+  height: 636px;
+  width: 660px;
   position: absolute;
   top: 0px;
   right: -124px;
   overflow: hidden;
+  z-index: -1;
  }
 
 .footer {
@@ -302,28 +309,31 @@
   margin: 60px auto 40px auto;
   width: 90%;
   display: flex;
-  justify-content: space-between;
 }
 
-.footer__column__content_copyright {
+.footer__column_content_copyright {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.footer__column_content_about {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
   flex-basis: 711px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
 }
 
-.footer__column__content_about {
+.footer__column_content_social {
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
-}
-
-.footer__column__content_social {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
+  flex-basis: 711px;
+  align-items: flex-end;
 }
 
 .logo_place_footer {
@@ -334,6 +344,7 @@
 .footer__author {
   margin: 0;
   padding: 0;
+  margin: 18px 0;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
