--- a/styles/style.css
+++ b/styles/style.css
@@ -149,9 +149,9 @@
 }
 
 .table {
+  padding: 0;
   width: 1100px;
-  margin: 0px auto 100px;
-  padding: 90px;
+  margin: 60px auto 40px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -160,8 +160,8 @@
 
 .table__cell {
   width: 250px;
-  margin-top: 60px;
   margin-right: 20px;
+  padding-bottom: 60px;
 }
 
 .table__text:nth-child(3) {
@@ -307,6 +307,7 @@
   margin: 60px auto 40px auto;
   width: 90%;
   display: flex;
+  justify-content: space-between;
 }
 
 .footer__column_content_copyright {
@@ -315,6 +316,7 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  flex-basis: 711px;
 }
 
 .footer__column_content_about {
@@ -322,7 +324,6 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  flex-basis: 711px;
 }
 
 .footer__column_content_social {
@@ -330,8 +331,6 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  flex-basis: 711px;
-  align-items: flex-end;
 }
 
 .logo_place_footer {
