--- a/styles/style.css
+++ b/styles/style.css
@@ -256,22 +256,13 @@
   color: white;
 }
  .table_theme_dark {
-  margin: 0;
-  padding: 0;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 90px;
-  width: 1100px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  list-style-type: none;
+  margin: 80px auto 10px;
  }
 
  .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-top: 80px;
+  padding-bottom: 80px;
 }
 
  .table__heading_theme_dark {
