--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,6 +1,5 @@
-.cards__items {
-    margin: 0;
+.cards__item {
+    margin: 0 100;
     padding: 0;
-    height: 160px;
-    width: 160px;
+    width: 240px;
 }
