--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,7 +1,9 @@
 .cards {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     width: 920px;
     display: flex;
-    
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
