--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -6,4 +6,7 @@
     top: 64px;
     right: 0px;
     z-index: -2;
+    transform: rotate(-14deg);
+    animation-name: rotate;
+    animation-duration: 20s;
   }
