--- a/blocks/khan/__quote-author/khan__quote-author.css
+++ b/blocks/khan/__quote-author/khan__quote-author.css
@@ -1,8 +1,7 @@
-.cards__title {
-    margin: 0;
+.khan__quote-author {
+    margin: 0 0 5px;
     padding: 0;
     line-height: 1.15;
     font-size: 24px;
     font-weight: bold;
-    text-align: center;
 }
