--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -4,3 +4,11 @@
     height: 316px;
     width: 515px; 
 }
+
+.video__iframe:first-of-type {
+    margin-right: 10px;
+}
+
+.video__iframe:last-of-type {
+    margin-left: 10px;
+}
