--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,6 +1,6 @@
 .video__iframes {
     padding: 0;
-    margin: 50px auto 0;
-    display:flex;
-    justify-content:center;
+    margin: 50px auto -50px;
+    display: flex;
+    justify-content: center;
 }
