project 2 2nd resubmit

--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     height: 316px;
-    width: 515px; 
+    width: 515px;
+    border-style: none;
 }
 
 .video__iframe:first-of-type {
