--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,6 +1,8 @@
 .khan__book-pic {
-    margin: 0;
+    margin: 68px 0 0;
     padding: 0;
     height: 620px;
     width: 608px;
+    object-fit: cover;
+    object-position: top;
 }
