--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,4 +1,6 @@
 .khan__buy-link {
+    margin: 68px 0 0 48px;
+    padding: 0;
     line-height: 42px;
     font-size: 30px;
     font-weight: normal;
