--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,8 @@
 @import url(../vendor/normalize.css);
 
-@import url(../pages/);
-
 @import url(../blocks/logo/logo.css);
-@import url(../blocks/logo/__place/_footer/logo_place_footer.css);
-@import url(../blocks/logo/__place/_header/logo_place_header.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -82,16 +80,4 @@
 @import url(../blocks/khan/__quote/khan__quote.css);
 @import url(../blocks/khan/__title/khan__title.css);
 
-
-
-
-.page {
-    min-width: 1100px;
-    /* we don't know how to make mobile versions of websites yet, */
-    /* so here we've set a minimum page width */
-    max-width: 1600px;
-    /* here we've set a maximum page width */
-    margin: 0 auto;
-    /* this ensures that all content is centered on screens wider than 1600px */
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-  }
+@import url(../blocks/page/page.css);
