--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,7 +1,7 @@
 .feynman {
     position: relative;
     min-height: 790px;
-    padding: 0;
+    padding: 100px 0 0;
     background: #F2F2F2 url(../../images/feynman.png) no-repeat bottom left / 867px 637px;
     /* background-color: #F2F2F2;
     background-image: url(../images/feynman.png);
