--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -1,11 +1,9 @@
 .two-columns {
+    margin: 0 auto;
+    padding: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     justify-content: space-between;
     width: 80%;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: auto;
-    margin-right: auto;
   }
