--- a/pages/index.css
+++ b/pages/index.css
@@ -28,6 +28,8 @@
 @import url(../blocks/table/__heading/_theme/table__heading_theme_dark.css);
 @import url(../blocks/table/__text/table__text.css);
 @import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
+@import url(../blocks/table/__padding/table__padding.css);
+@import url(../blocks/table/__padding/_theme/table__padding_theme_dark.css);
 
 @import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/two-columns/__brief/two-columns__brief.css);
